--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
     <title>Tic-Tac-Toe</title>
 </head>
 <body>
-    
+    <div id="board">
+        <p class="cell" id="0"></p>
+        <p class="cell" id="1"></p>
+        <p class="cell" id="2"></p>
+        <p class="cell" id="3"></p>
+        <p class="cell" id="4"></p>
+        <p class="cell" id="5"></p>
+        <p class="cell" id="6"></p>
+        <p class="cell" id="7"></p>
+        <p class="cell" id="8"></p>
+    </div>
 </body>
 </html>
