--- a/index.html
+++ b/index.html
@@ -1,24 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <script src="javascript.js" defer></script>
-    <title>Tic-Tac-Toe</title>
-</head>
-<body>
-    <div id="board">
-        <p class="cell" id="0"></p>
-        <p class="cell" id="1"></p>
-        <p class="cell" id="2"></p>
-        <p class="cell" id="3"></p>
-        <p class="cell" id="4"></p>
-        <p class="cell" id="5"></p>
-        <p class="cell" id="6"></p>
-        <p class="cell" id="7"></p>
-        <p class="cell" id="8"></p>
-    </div>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="styles.css" />
+		<script src="javascript.js" defer></script>
+		<title>Tic-Tac-Toe</title>
+	</head>
+	<body>
+		<main>
+			<section class="" id="player1"></section>
+			<section class="" id="board">
+				<div id="game">
+					<p class="cell" id="0"></p>
+					<p class="cell" id="1"></p>
+					<p class="cell" id="2"></p>
+					<p class="cell" id="3"></p>
+					<p class="cell" id="4"></p>
+					<p class="cell" id="5"></p>
+					<p class="cell" id="6"></p>
+					<p class="cell" id="7"></p>
+					<p class="cell" id="8"></p>
+				</div>
+			</section>
+			<section class="" id="player2"></section>
+		</main>
+	</body>
 </html>
