--- a/index.html
+++ b/index.html
@@ -10,8 +10,15 @@
 	</head>
 	<body>
 		<main>
-			<section class="" id="player1"></section>
+			<section class="" id="player1">
+				<h2 class="active" id="p1">Player 1 [x]</h2>
+				<div class="score">
+					<h3>Score:</h3>
+					<h2>3</h2>
+				</div>
+			</section>
 			<section class="" id="board">
+				<h1>hello</h1>
 				<div id="game">
 					<p class="cell" id="0"></p>
 					<p class="cell" id="1"></p>
@@ -24,7 +31,13 @@
 					<p class="cell" id="8"></p>
 				</div>
 			</section>
-			<section class="" id="player2"></section>
+			<section class="" id="player2">
+				<h2 id="p2">Player 2 [o]</h2>
+				<div class="score">
+					<h3>Score:</h3>
+					<h2>1</h2>
+				</div>
+			</section>
 		</main>
 	</body>
 </html>
