--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 				<h2 class="active" id="p1">Player 1 [x]</h2>
 				<div class="score">
 					<h3>Score:</h3>
-					<h2>3</h2>
+					<h2 id="p1score"></h2>
 				</div>
 			</section>
 			<section class="" id="board">
@@ -35,7 +35,7 @@
 				<h2 id="p2">Player 2 [o]</h2>
 				<div class="score">
 					<h3>Score:</h3>
-					<h2>1</h2>
+					<h2 id="p2score"></h2>
 				</div>
 			</section>
 		</main>
