--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 	<body>
 		<main>
 			<section class="" id="player1">
-				<h2 class="active" id="p1">Player 1 [x]</h2>
+				<h2 class="active" id="p1">Player 1</h2>
 				<div class="score">
 					<h3>Score:</h3>
 					<h2 id="p1score"></h2>
 				</div>
 			</section>
 			<section class="" id="board">
-				<h1>hello</h1>
+				<h1 id="roundWinner"></h1>
 				<div id="game">
 					<p class="cell" id="0"></p>
 					<p class="cell" id="1"></p>
@@ -32,7 +32,7 @@
 				</div>
 			</section>
 			<section class="" id="player2">
-				<h2 id="p2">Player 2 [o]</h2>
+				<h2 id="p2">Player 2</h2>
 				<div class="score">
 					<h3>Score:</h3>
 					<h2 id="p2score"></h2>
