--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 				</div>
 			</section>
 			<section class="" id="board">
-				<h1 id="roundWinner"></h1>
+				<div id="roundWinner">
+					<h1 id="gameWinner">Player 1 won that round</h1>
+				</div>
 				<div id="game">
 					<p class="cell" id="0"></p>
 					<p class="cell" id="1"></p>
