transition for onload overlay and round winner

--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
 	</head>
 	<body>
 		<main>
+			<div id="overlay">
+				<div id="initiate">
+					<h1 id="welcome">Welcome to Tic-Tac-Toe</h1>
+					<div>
+						<h1 class="choice" id="pvp">Player vs Player</h1>
+						<h1 class="choice" id="pve">Player vs AI</h1>
+					</div>
+				</div>
+			</div>
 			<section class="" id="player1">
 				<h2 class="active" id="p1">Player 1</h2>
 				<div class="score">
@@ -19,7 +28,7 @@
 			</section>
 			<section class="" id="board">
 				<div id="roundWinner">
-					<h1 id="gameWinner">Player 1 won that round</h1>
+					<h1 id="gameWinner"></h1>
 				</div>
 				<div id="game">
 					<p class="cell" id="0"></p>
