--- a/index.html
+++ b/index.html
@@ -17,6 +17,19 @@
 						<h1 class="choice" id="pvp">Player vs Player</h1>
 						<h1 class="choice" id="pve">Player vs AI</h1>
 					</div>
+					<div class="inputs">
+						<div class="input">
+							<label for="player1Name" class="label">Player 1 name</label>
+							<input type="text" name="player1Name" id="" />
+							<span class="mark">x</span>
+						</div>
+						<div class="input">
+							<label for="player2Name" class="label">Player 2 name</label>
+							<input type="text" name="player1Name" id="" />
+							<span class="mark">o</span>
+						</div>
+					</div>
+					<button id="start" onclick="closeOverlay();">Start Game</button>
 				</div>
 			</div>
 			<section class="" id="player1">
