functional easy ai, picks random free spot

--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
 					</div>
 					<div class="inputs">
 						<div class="input">
-							<label for="player1Name" class="label">Player 1 name</label>
-							<input type="text" name="player1Name" id="" />
+							<label for="player1Name" class="label">Player 1</label>
+							<input type="text" name="player1Name" id="" placeholder="Name" />
 							<span class="mark">x</span>
 						</div>
 						<div class="input">
-							<label for="player2Name" class="label">Player 2 name</label>
-							<input type="text" name="player1Name" id="" />
+							<label for="player2Name" class="label">Player 2</label>
+							<input type="text" name="player1Name" id="" placeholder="Name" />
 							<span class="mark">o</span>
 						</div>
 					</div>
