player name inputs display on pvp start

--- a/index.html
+++ b/index.html
@@ -20,16 +20,26 @@
 					<div class="inputs">
 						<div class="input">
 							<label for="player1Name" class="label">Player 1</label>
-							<input type="text" name="player1Name" id="" placeholder="Name" />
+							<input
+								type="text"
+								name="player1Name"
+								id="playerInput1"
+								placeholder="Name"
+							/>
 							<span class="mark">x</span>
 						</div>
 						<div class="input">
 							<label for="player2Name" class="label">Player 2</label>
-							<input type="text" name="player1Name" id="" placeholder="Name" />
+							<input
+								type="text"
+								name="player1Name"
+								id="playerInput2"
+								placeholder="Name"
+							/>
 							<span class="mark">o</span>
 						</div>
 					</div>
-					<button id="start" onclick="closeOverlay();">Start Game</button>
+					<button id="start" onclick="startPvp();">Start Game</button>
 				</div>
 			</div>
 			<section class="" id="player1">
